# radarcheck

./: .coverage  .dockerignore  .gitignore  .sandbox-ports  .sandbox-volumes  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  FEATURES.md  GEMINI.md  IMPROVEMENT_PLAN.md  LICENSE  PLAN.md  README.md  SANDBOX_NOTE.md  TTS_SETUP.md  WEATHER_FEATURES_PLAN.md  _debug_prompt.txt  _forecast_output.txt  alerts.py  app.py  audio_gen.py  build_cache.sh  build_tiles.py  cache_builder.py  compare_gfs_snow.py  config.py  debug_gfs.grib2  debug_gfs.grib2.5b7b6.idx  deploy.sh  dev-claude.sh  dev-services.sh  docker-entrypoint.sh  ecmwf.py  fly.toml  forecast_table.py  grib_fetcher.py  (+19 more)
.claude/: settings.local.json
.github/workflows/: tests.yml
cache_backup/: scheduler_status.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
docs/: API.md  README.md  flyio-guide.md  ios-app-design.md  ios-getting-started.md  rctile-v2-impl-plan.md  rctile-v2-spec.md
docs/adr/: 001-file-based-caching.md  002-multi-model-support.md  003-api-authentication.md
docs/architecture/: backend_outputs.md  job_queue_spec.md  overview.md  precipitation-accumulation.md
docs/operations/: server-deployment-plan.md
docs/planning/: PLAN-download-queue.md  future_models.md  roadmap.md  todos.md
docs/plans/: 2026-03-08-solar-clearness-index.md  2026-03-08-summer-variables-design.md  2026-03-09-qualitative-forecast-design.md  2026-03-09-qualitative-forecast-plan.md  2026-03-09-qualitative-v2-design.md  2026-03-12-latest-view.md  2026-03-12-storm-vars-precip-fix.md  2026-03-14-sky-clarity-index.md
docs/research/: cloudiness-index-algorithms.md  hrrr-cloud-vars-full-accounting.md  nbm-cloud-vars-analysis.md
docs/ux/: ideas.md
docs/worklog/: README.md  cache-builder-triage-2026-01-20.md  ecmwf-herbie-integration-2026-01-24.md  forecast-table-verification-2026-01-20.md  gfs-missing-hours-2026-01-25.md  snow-accumulation-bug-2026-01-22.md  (+1 more)
ios/: README.md
routes/: __init__.py  forecast.py  status.py  writeup.py
rust_worker/: Cargo.toml  build-env.sh
rust_worker/crates/core/: Cargo.toml
rust_worker/crates/core/src/: bucket_mapping.rs  config.rs  db.rs  fetch.rs  grib.rs  idx.rs  lib.rs  rctile.rs  rctile_v2.rs  solar.rs  tile_query.rs  tiles.rs  worker.rs
rust_worker/crates/server/: Cargo.toml
rust_worker/crates/server/src/: main.rs  status.rs
rust_worker/crates/worker/: Cargo.toml
rust_worker/crates/worker/src/: main.rs
rust_worker/crates/worker/tests/: grib_parity.rs  rctile_e2e.rs  tile_integration.rs  v2_benchmark.rs
scripts/: apply-stagehand-patch.sh  build_history.py  build_tiles_scheduled.py  check_nomads_vars.py  compare_gribs.py  debug_grib.py  debug_snow_check.py  debug_t2m.py  latest_table.py  prefetch_forecast_data.py  qualitative.py  run-forecast.sh  run_model_matrix.py  run_scheduler.sh  run_worker.sh  scheduler.py  test_herbie_ecmwf.py  test_tiles_e2e.py  verify_grib_coords.py
static/js/: main.js  (+9 more)
templates/: base.html  explainer.html  forecast.html  index.html  location.html  snow.html  status.html  summary.html  table.html  table_geo.html  writeup.html
tests/: e2e_parity.py  test_api.py  test_api_extended.py  test_app_comprehensive.py  test_audit_logs.py  test_cache_builder.py  test_config.py  test_downloader_schedule.py  test_drain_queue_integration.py  test_ecmwf.py  test_ecmwf_integration.py  test_error_handling.py  test_forecast_hours_schedule.py  test_forecast_table.py  test_grib_fetcher.py  test_hourly_override_schedule.py  test_hrrr.py  test_job_status_transitions.py  test_job_worker.py  test_jobs.py  test_latest_table.py  test_metadata_validation.py  test_plotting.py  test_qualitative_raw_hrrr.py  test_scheduler_enqueue.py  test_status_api.py  test_status_db.py  test_status_scheduled_api.py  test_status_utils.py  test_summary.py  test_table_multirun.py  test_tile_db.py  test_tiles_build.py  test_tiles_completeness.py  test_tiles_integration.py  test_utils.py  test_worker.py  test_worker_integration.py
utils/: filelock.py
(+4859 files in other folders)
