[package]
name = "radarcheck-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
npz = ["dep:zip", "dep:ndarray-npy"]

[dependencies]
# Pure Rust GRIB2 parser (no C dependencies except openjpeg for JPEG2000)
# gridpoints-proj disabled to avoid proj-sys/cmake dependency — we compute Lambert coords ourselves
grib = { version = "0.13", default-features = false, features = ["jpeg2000-unpack-with-openjpeg", "png-unpack-with-png-crate", "ccsds-unpack-with-libaec"] }
ndarray = "0.16"
bytemuck = { version = "1", features = ["derive"] }

# HTTP client for GRIB downloads (rustls = no openssl dependency)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# SQLite job queue
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File locking for concurrent tile writes (matches Python filelock)
fs2 = "0.4"

# Memory-mapped file I/O for .rctile point queries
memmap2 = "0.9"

# Logging
log = "0.4"

# Error handling
anyhow = "1"
thiserror = "2"

# Regex for idx parsing
regex = "1"

# Gzip compression for rctile v2 per-cell chunks
flate2 = "1"

# NPZ format — only used for reading test reference fixtures (behind "npz" feature)
ndarray-npy = { version = "0.9", optional = true }
zip = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
