[package]
name = "radarcheck-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "radarcheck-server"
path = "src/main.rs"

[dependencies]
radarcheck-core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
memmap2 = "0.9"
