[package]
name = "radarcheck-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "radarcheck-worker"
path = "src/main.rs"

[[bin]]
name = "e2e-tile-worker"
path = "src/bin/e2e_tile_worker.rs"

[dependencies]
radarcheck-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ndarray = "0.16"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
